# vigorish

./: .coveragerc  .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .prettierrc  MANIFEST.in  Procfile  README.md  audit_results.json  bad_dupes.json  batter_pfx.json  config.py  heroku.sh  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  vig.config.json  vig.py
.github/: pr-labeler.yml  release-drafter.yml
app/: __init__.py
app/cli/: vig.py  (+1 more)
client/: package-lock.json  package.json
nightmarejs/: bbref_boxscore.js  brooks_games_for_date.js  brooks_pitchfx_by_game.js
prev_version/: vig.py
server/: __init__.py
tests/: conftest.py  default.config.json  test_all_game_data.py  test_bbref_boxscores.py  test_bbref_games_for_date.py  test_brooks_games_for_date.py  test_brooks_pitch_logs.py  test_brooks_pitchfx.py  test_cli.py  test_combine_boxscore_and_pitchfx.py  test_combine_scraped_data.py  test_config_config_file.py  test_config_config_setting.py  test_config_dotenv_file.py  test_config_file.py  test_config_setting.py  test_data_all_game_data.py  test_data_all_player_data.py  test_data_scraped_data.py  test_models_season.py  test_models_status_date.py  test_models_status_game.py  test_patch_bbref_games_for_date.py  test_patch_brooks_games_for_date.py  test_scrape_bbref_games_for_date.py  test_scrape_brooks_games_for_date.py  test_scrape_brooks_pitch_logs.py  test_scrape_brooks_pitchfx.py  test_season.py  test_task_add_pitchfx_to_database.py  test_task_add_to_database.py  (+18 more)
(+1130 files in other folders)
